--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -32,7 +32,7 @@
 </app-event-sidebar-desktop>
 
 <button mat-fab
-        [disabled]="!dataService.isLoggedIn()"
+        *ngIf="dataService.hasRole()"
         class="float-fixed-right-bottom mat-elevation-z2"
         [routerLink]="['/add-event']"
         [queryParams]="{date: dateToDate(selDate).toDateString()}">
