--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -38,7 +38,8 @@
 <div class="float-fixed-right-bottom">
     <button mat-fab
             *ngIf="dataService.hasRole()"
-            class="mat-elevation-z2"
+            [class.gone]="dataService.isScrollingDown()"
+            class="add-button mat-elevation-z2"
             [routerLink]="['/add-event']">
         <mat-icon>add</mat-icon>
     </button>
