Fix horizontal overflow on add event mobile

--- a/src/app/add-event/add-event.component.html
+++ b/src/app/add-event/add-event.component.html
@@ -91,11 +91,13 @@
       </mat-form-field>
     </div>
 
-    <div class="full-width-details switch">
-      <mat-slide-toggle
-        [(ngModel)]="event.notify">
-        Notify followers on creation/updation
-      </mat-slide-toggle>
+    <div>
+      <div class="full-width-details switch">
+        <mat-slide-toggle
+          [(ngModel)]="event.notify">
+          Notify followers on creation/updation
+        </mat-slide-toggle>
+      </div>
     </div>
 
     <div>
