--- a/src/app/event-card/event-card.component.html
+++ b/src/app/event-card/event-card.component.html
@@ -4,7 +4,7 @@
           [routerLink]="overrideClick ? null : ['/event', event.str_id]">
   <mat-card-header>
     <img mat-card-avatar
-         [src]="event.image_url"
+         [src]="dataService.getResized(event.image_url, 100)"
          [src-fallback]="event.bodies[0].image_url"
          class="object-cover" />
     <mat-card-title>{{ event.name }}</mat-card-title>
