Remove unknown method called from router outlet scroll

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -57,7 +57,7 @@
     </mat-nav-list>
 </ngx-flyout>
 
-<div id="router-out" (scroll)="onScroll($event)">
+<div id="router-out">
     <div id="top-gap" *ngIf="!isSandbox"></div>
     <router-outlet #o="outlet"></router-outlet>
 </div>
