--- a/src/app/event-card/event-card.component.html
+++ b/src/app/event-card/event-card.component.html
@@ -1,17 +1,10 @@
-<mat-card mat-ripple
-          class="sub-card"
-          *ngIf="event"
-          [routerLink]="overrideClick ? null : ['/event', event.str_id]">
-  <mat-card-header>
-    <img mat-card-avatar
-         [src]="dataService.getResized(event.image_url, 150)"
-         [src-fallback]="event.bodies[0].image_url"
-         class="object-cover" />
-    <mat-card-title>{{ event.name }}</mat-card-title>
-    <mat-card-subtitle>
-      <div id="subtitle">
-        {{ dataService.GetEventSubtitle(event) }}
-      </div>
-    </mat-card-subtitle>
-  </mat-card-header>
-</mat-card>
+<div class="sub-card"
+     *ngIf="event"
+     mat-ripple
+     [routerLink]="overrideClick ? null : ['/event', event.str_id]">
+
+  <app-card [avatar]="dataService.getResized(event.image_url, 150)"
+            [title]="event.name"
+            [subtitle]="dataService.GetEventSubtitle(event)">
+  </app-card>
+</div>
