refactor(many): Cleanup global styles Move once-used styles to individual components

--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -3,7 +3,7 @@
     <tbody>
       <tr>
         <td *ngIf="avatar" class="avatar">
-          <img [src]="avatar" />
+          <img [src]="avatar" class="img-circle object-cover" />
         </td>
 
         <td>
