fix(user): fix layout width of roles on desktop

--- a/src/app/user-details/user-details.component.css
+++ b/src/app/user-details/user-details.component.css
@@ -20,7 +20,7 @@
 
 .body {
     display: inline-block;
-    min-width: 300px;
+    width: 320px;
 }
 
 #info-header {
@@ -48,7 +48,7 @@
 
     .body {
         display: block;
-        min-width: auto;
+        width: auto;
     }
 
     .profile-pic {
