fix(event): remove margin at bottom of following people

--- a/src/app/event-details/event-details.component.css
+++ b/src/app/event-details/event-details.component.css
@@ -60,10 +60,15 @@
 
 .right {
     margin: 20px;
+    margin-bottom: 0;
 }
 
 .right .section {
     margin-bottom: 30px;
+}
+
+.right .section:nth-last-of-type(1) {
+    margin-bottom: 0;
 }
 
 .right .rl-header {
