--- a/src/styles.css
+++ b/src/styles.css
@@ -77,6 +77,7 @@ mat-form-field, mat-form-field *, .markdown * {
     box-shadow: none !important;
     margin: 0;
     outline:none;
+    border-radius: 0 !important;
 }
 
 .sub-card:hover {
