fix(news): prevent article from opening on reaction button in WebKit

--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -41,7 +41,7 @@
 
       <div class="react-button" [style.color]="getReactColor(item)">
         <button mat-icon-button [matMenuTriggerFor]="reactMenu" class="noprop">
-            <mat-icon>thumb_up</mat-icon>
+            <mat-icon class="noprop">thumb_up</mat-icon>
         </button>
       </div>
 
