--- a/src/styles.css
+++ b/src/styles.css
@@ -140,6 +140,11 @@ mat-form-field, mat-form-field *, .markdown * {
 
 .markdown tr:hover {background-color: #ddd;}
 
+.markdown img {
+    max-width: 100%;
+    height: auto;
+}
+
 .object-cover {
     object-fit: cover;
 }
