feat(user-details): Add contact number and make it and email followable

--- a/src/app/user-details/user-details.component.css
+++ b/src/app/user-details/user-details.component.css
@@ -2,6 +2,11 @@
     margin: 7px 0 0 5%;
 }
 
+a {
+    color: var(--primary-color);
+    text-decoration: none;
+}
+
 .profile-pic {
     height: 150px;
     width: 150px;
