--- a/src/app/body-details/body-details.component.css
+++ b/src/app/body-details/body-details.component.css
@@ -5,14 +5,14 @@
 
 .card-header {
     display: flex;
-    padding: 20px;
+    padding: 8px 20px;
     padding-bottom: 0;
 }
 
 .share-div {
     text-align: right;
-    padding:0;
-    margin:0
+    padding: 0;
+    margin: 0
 }
 
 .theme-header {
@@ -20,15 +20,29 @@
 }
 
 .action-buttons {
+    padding-top: 5px;
     margin-left: auto;
     margin-top: -10px;
 }
 
-.body-name {
-    font-weight: bold;
-    font-size: 14pt;
+.action-buttons .icon-button {
+    float: right;
+}
+
+.body-name-container {
     margin-top: 5px;
     margin-bottom: 10px;
+}
+
+.body-name {
+    margin: 0;
+    margin-bottom: 2px;
+    font-weight: bold;
+    font-size: 14pt;
+}
+
+.body-short-desc {
+    font-size: 10pt;
 }
 
 .description {
