--- a/src/app/venter/detailed-complaint/detailed-complaint.component.css
+++ b/src/app/venter/detailed-complaint/detailed-complaint.component.css
@@ -116,10 +116,7 @@
 .upVote-button {
     color: black;
     background-color: yellow;
-    padding-left: 50px;
-    padding-right: 50px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding: 10px 50px;
     align-content: center;
     font-weight: bold;
     text-decoration: none;
