--- a/src/app/venter/file-complaint/file-complaint.component.css
+++ b/src/app/venter/file-complaint/file-complaint.component.css
@@ -26,10 +26,7 @@ mat-form-field {
 .complaint-button {
     color: black;
     background-color: yellow;
-    padding-left: 50px;
-    padding-right: 50px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding: 10px 50px;
     align-content: center;
     font-weight: bold;
     text-decoration: none;
