feat(map): Add original markers from InstiMap

--- a/src/app/map/map.component.css
+++ b/src/app/map/map.component.css
@@ -14,6 +14,10 @@
     height: 100%;
 }
 
+#marker, #user-marker {
+    height: 60px;
+}
+
 .floating-box {
     background: white;
     position: fixed;
