--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -2,8 +2,8 @@
 
 <div class="main" [class.sandbox]="dataService.isSandbox">
   <div [style.cursor]="pointer" id="map" class="map"></div>
-  <img id="marker" src="/assets/location-icon.svg">
-  <img id="user-marker" src="/assets/location-icon.svg">
+  <img id="marker" src="/assets/map/marker_blue_s.png">
+  <img id="user-marker" src="/assets/map/marker_red_s.png">
 </div>
 
 <div id="main-box" class="floating-box mat-elevation-z3"
