fix(map): Show search button on desktop

--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -44,7 +44,7 @@
 
 </div>
 
-<button mat-mini-fab class="search-button only-mobile"
+<button mat-mini-fab class="search-button"
        (click)="showSearch = true"
        *ngIf="!showSearch">
   <mat-icon>search</mat-icon>
